--- a/index.html
+++ b/index.html
@@ -105,6 +105,26 @@
                 <tr><td>Fried Parathas</td><td>Avoid</td><td>–</td><td>Whole wheat paratha (non-fried)</td></tr>
             </tbody>
         </table>
+
+        <h3 class="food-category">Foods to Avoid with Thyroid Medication</h3>
+        <p>It is important to follow proper timing when consuming food relative to thyroid medication, as certain foods may interfere with the absorption of the medication.</p>
+        <table>
+            <thead>
+                <tr>
+                    <th>Food</th>
+                    <th>Timing</th>
+                    <th>Reason</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr><td>Calcium-Rich Foods (e.g., Dairy, Leafy Greens)</td><td>Avoid within 1 hour of medication</td><td>Calcium can interfere with thyroid hormone absorption.</td></tr>
+                <tr><td>Iron-Rich Foods (e.g., Red Lentils, Spinach)</td><td>Avoid within 1 hour of medication</td><td>Iron can decrease medication effectiveness.</td></tr>
+                <tr><td>Soy-Based Foods (e.g., Tofu, Soy Milk)</td><td>Avoid within 4 hours of medication</td><td>Soy can block thyroid hormone absorption.</td></tr>
+                <tr><td>High-Fiber Foods (e.g., Bran, Oats)</td><td>Avoid within 1 hour of medication</td><td>High fiber can bind to thyroid hormones and decrease absorption.</td></tr>
+                <tr><td>Foods High in Goitrogens (e.g., Raw Broccoli, Cauliflower)</td><td>Avoid if eating raw, cooked is fine after waiting 30-60 minutes</td><td>Goitrogens may interfere with thyroid function, especially when eaten raw.</td></tr>
+                <tr><td>Milk & Dairy Products</td><td>Fine to consume, but wait at least 30-60 minutes after medication</td><td>Milk does not interfere as long as it is consumed after a waiting period.</td></tr>
+            </tbody>
+        </table>
     </div>
 
     <script>
